# Graph-HSCN

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  main.py  pyproject.toml  requirements-core.txt  requirements-cpu.txt  requirements-gpu.txt  run.py  setup.py  submission.json
.devcontainer/: devcontainer-gpu.json  devcontainer.json
.github/workflows/: build-and-push.yaml  build-and-push.yml  docker-image.yml
agg_results/: agg_runs.py  explore_results.ipynb
ca_net/: logger.py  metric_wrapper.py
ca_net/config/: __init__.py  graph_transformer_config.py  wandb_config.py
ca_net/encoder/: __init__.py  composed_encoders.py
ca_net/layer/: san_layer.py  sc_layer.py
ca_net/loader/: __init__.py  loader.py
ca_net/loss/: __init__.py
ca_net/network/: san_transformer.py
ca_net/train/: custom_train.py  sc_gnn_train.py
ca_net/transform/: __init__.py  transforms.py
configs/: peptides_struct_GCN.yaml
configs/GAT/: citeseer_GAT.yaml  cora_GAT.yaml  peptides_func_GAT.yaml  pubmed_GAT.yaml
configs/GCN/: citeseer_GCN.yaml  cora_GCN.yaml  peptides_func_GCN.yaml  pubmed_GCN.yaml
configs/GIN/: citeseer_GIN.yaml  cora_GIN.yaml  peptides_struct_GIN.yaml  pubmed_GIN.yaml
configs/SAN/: peptides_func_SAN.yaml  (+1 more)
gnn_180b/: __init__.py  logger.py  metric_wrapper.py  metrics_ogb.py  util.py
graph_hscn/: constants.py  logger.py  loss.py  metric_wrapper.py  metrics.py  metrics_ogb.py  util.py
notebooks/: 01-hetero.ipynb  cluster_attention.ipynb  hetero_gnn.ipynb  test (1).ipynb  test.ipynb
run/: run_baselines_citation.sh  run_baselines_peptides.sh
shgnn/: logger.py  metric_wrapper.py
wandb/: latest-run
(+116 files in other folders)
