[tool.poetry]
name = "ca-net"
version = "0.1.0"
description = ""
authors = ["camille-004 <dunningcamille@gmail.com>"]
readme = "README.md"
packages = [{include = "ca-net"}]

[tool.poetry.dependencies]
python = "^3.10"
pre-commit = "3.0.4"
pytest = "^7.2.0"
black = "23.1.0"
flake8 = "^6.0.0"
isort = "^5.11.4"
jupyter = "^1.0.0"
pyg-lib = "^0.1.0+pt113cu117"
torch-geometric = "^2.2.0"
torch-cluster = "^1.6.0+pt113cu117"
torch-scatter = "^2.1.0+pt113cu117"
torch-sparse = "^0.6.16+pt113cu117"
torch-spline-conv = "^1.2.1+pt113cu117"
torch = "^1.13.1"
pandas = "^1.5.2"
pytorch-lightning = "^1.8.6"
ogb = "^1.3.5"
rdkit = "^2022.9.3"
flake8-docstrings = "^1.7.0"
yacs = "^0.1.8"
wandb = "^0.13.10"
tensorboardx = "^2.5.1"
matplotlib = "^3.7.0"
networkx = "^3.0"

[tool.poetry.dev-dependencies]
pre-commit = "3.0.4"
pytest = "^7.2.0"
black = "23.1.0"
flake8 = "^6.0.0"
isort = "^5.11.4"
flake8-docstrings = "^1.7.0"

[[tool.poetry.source]]
name = "PyG"
url = "https://data.pyg.org/whl/torch-1.13.0+cu117.html"
default = false
secondary = false


[tool.poetry.group.dev.dependencies]
plotly = "^5.13.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true

[tool.flake8]
docstring-convention = "numpy"
extend-ignore = """
    E203,
    F841,
    W503,
    D107,
    D403
"""

[tool.black]
line-length = 79
include = '\.pyi?$'
exclude = '''
/(
	\.git
| \.hg
| \.mypy_cache
| \.tox
| \.venv
| _build
| buck-out
| build
| gnn_v2/tests
| gnn_v2/notebooks
)/
'''
